# unseamless-coop

./: .gitignore  .rift.toml  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
.claude/skills/fleet/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/reverse-engineer/: SKILL.md
.claude/skills/rig-guides/: SKILL.md
.claude/skills/steam-deck/: SKILL.md
.claude/skills/sync/: SKILL.md
.claude/skills/test-loop/: SKILL.md
.claude/skills/windows-test/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/dx12-harness/: Cargo.toml  build.rs
crates/dx12-harness/src/: main.rs
crates/harness/: Cargo.toml
crates/harness/src/: main.rs  steam.rs  tcp.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/unseamless-coop/: Cargo.toml  build.rs
crates/unseamless-coop/assets/: README.md
crates/unseamless-coop/src/: actionq.rs  app.rs  bridge.rs  clipboard.rs  config.rs  coop.rs  crashdump.rs  debug.rs  debug_panel.rs  diag.rs  feature.rs  forward.rs  guard.rs  guide_log.rs  hook.rs  input.rs  lib.rs  logbuf.rs  logger.rs  mods.rs  nameplates.rs  native_draw.rs  notify.rs  overlay.rs  patch.rs  playstate.rs  proxy.rs  rig_guide.rs  saves.rs  sdk.rs  session.rs  session_probe.rs  state.rs  steam.rs  steam_ready.rs
crates/unseamless-coop/src/features/: auto_session.rs  boot_volume.rs  crit_coop.rs  death_debuffs.rs  mod.rs  nameplates.rs  native_menu.rs  native_nameplates.rs  native_toasts.rs  notifications.rs  observer.rs  playstate.rs  rig_guide.rs  scaling.rs  seamless.rs  session_actions.rs  session_limit.rs  spectate.rs  summons.rs  world_time.rs
crates/unseamless-core/: Cargo.toml
crates/unseamless-core/assets/fonts/: README.md  proggy-clean-ascii.bdf  proggy-tiny-ascii.bdf  spleen-6x12-ascii.bdf  spleen-8x16-ascii.bdf
crates/unseamless-core/src/: config.rs  crypto.rs  death_debuffs.rs  diagnostics.rs  framing.rs  game_state.rs  guide.rs  lib.rs  loader.rs  menu.rs  nameplate.rs  notifications.rs  pad.rs  palette.rs  peer.rs  projection.rs  protocol.rs  saves.rs  scaling.rs  settings.rs  spectate.rs  transport.rs  util.rs
crates/unseamless-core/src/bitmap_font/: bdf.rs  generated.rs  merge.rs  mod.rs
crates/unseamless-core/src/guide/: guides.rs
crates/unseamless-core/src/ui/: mod.rs
crates/unseamless-core/src/ui/input/: action.rs  event.rs  mod.rs  navigator.rs  view.rs
crates/unseamless-core/src/ui/render/: layout.rs  mod.rs  primitives.rs  tests.rs  theme.rs  widgets.rs
docs/: ARCHITECTURE.md  CODE-PATCHING.md  COOP-CONNECTION.md  COOP-SAVES.md  DEATH-DEBUFFS.md  DEVELOPMENT.md  FEATURES.md  FFI-UNWIND-AUDIT.md  FLEET-SMOKE-TEST.md  FRIEND-TEST-RUNBOOK.md  NAMEPLATES.md  OFFLINE-ITEMS-FINDINGS.md  OFFLINE-TITLE-SCREEN.md  ORCHESTRATION.md  OVERLAY-RENDERING.md  RE-GAME-UI.md  RE-SCREENSPACE.md  RIG-GUIDES.md  RIG-RUNBOOK.md  ROADMAP.md  RUNTIME-RE.md  SCALING.md  SDK-COVERAGE.md  SESSION-DRIVE.md  SESSION-RE-FINDINGS.md  SESSION-RE-RUNBOOK.md  SKIP-INTROS.md  SPECTATE.md  UI-LIBRARY.md  USAGE.md
docs/roles/: worker-solo.md  worker.md
scripts/: deck.sh  deploy.sh  harness-tcp.sh  harness.sh  rig.sh  test-core.sh  win.sh
scripts/deck/: deck-remote.sh  uinput-tap.c
scripts/fleet/: _cmd-inject  _color  _color-inject  _harness  _hook  _inbox  _inject  _place-inject  _ux  harness  hooks.settings.json  inbox  msg  orch-start  rig-verify  worker-integrate  worker-ls  worker-new  worker-open  worker-prune  worker-rm
scripts/re/: DumpDecomp.py  decompile.py  ghidra-decompile.sh  static.py  watch-write.py
scripts/rig/: gamescope-wrapper.sh  install-desktop.sh  normalize-graphics-config.py  seed-config.toml
scripts/win/: run.ps1
src/: lib.rs  logger.rs
