[workspace]
resolver = "3"
members = ["crates/unseamless-core", "crates/unseamless-coop", "crates/harness", "crates/launcher"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
log = "0.4"

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
strip = true

# `cargo build --profile diag` — a debugging build: keeps symbols and turns on debug assertions
# so panic backtraces are readable and `cfg!(debug_assertions)` reports the diag profile. Use it
# when chasing a crash; the shipping build stays lean (stripped). Not for release.
[profile.diag]
inherits = "release"
opt-level = 1
debug = true
strip = false
debug-assertions = true
