[workspace]
resolver = "3"
members = ["crates/unseamless-core", "crates/unseamless-coop", "crates/harness", "crates/launcher"]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
log = "0.4"
thiserror = "2"

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
strip = true

# `cargo build --profile diag` — a debugging build: keeps symbols and turns on debug assertions
# so panic backtraces are readable and `cfg!(debug_assertions)` reports the diag profile. Use it
# when chasing a crash; the shipping build stays lean (stripped). Not for release.
[profile.diag]
inherits = "release"
# Override the inherited `panic = "abort"`: the diag build is for chasing rig crashes, and the
# per-feature `catch_unwind` firewall in app.rs (the "a feature panics -> it's disabled, the game
# keeps running" guarantee) is a NO-OP under abort. With unwind, a panicking feature/probe is caught
# and disabled instead of aborting the whole game — so a batched multi-probe rig run survives one bad
# probe. (Found on the first rig run: a scaling-probe panic aborted the game under the inherited abort.)
panic = "unwind"
opt-level = 1
debug = true
strip = false
debug-assertions = true
