[package]
name = "unseamless-coop"
description = "A Rust rewrite of the Elden Ring Seamless Co-op (ERSC) mod, built on the fromsoftware-rs SDK"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "unseamless_coop"
crate-type = ["cdylib"]

[features]
# Dev-only side-channel bridge: a loopback TCP listener running a live `Session` so the harness can
# drive the mod over a socket (the /test-loop skill's layer 3). Enabled for rig/diag builds, NEVER
# release — a network listener has no place in a shipped DLL. `scripts/rig.sh` turns it on for diag.
bridge = []

[dependencies]
unseamless-core = { path = "../unseamless-core" }

# FromSoftware reverse-engineering SDK (vswarte/fromsoftware-rs). Pin both crates to the
# EXACT SAME commit the struct layouts were read against — mixing revisions is silent UB.
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs", rev = "8c67a84f394bd58efdb06a5be47f988e0c1a9995" }
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", rev = "8c67a84f394bd58efdb06a5be47f988e0c1a9995" }

windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",       # proxy: load the real dinput8 + our mods
    "Win32_System_SystemInformation",   # proxy: locate the system dinput8.dll
    "Win32_System_Threading",           # EAC guard: TerminateProcess
    "Win32_UI_WindowsAndMessaging",     # EAC guard: MessageBox
    "Win32_Security_Cryptography",      # CSPRNG for the generated default password
] }
log = { workspace = true }
simplelog = { version = "0.12", default-features = false }

# In-game overlay renderer (DX12 present-hook + imgui). Vendors minhook (C) + imgui-sys (C++), built
# for the windows target via mingw — cdylib-only, never core. The C++ runtime is linked statically
# (see `build.rs` + `.cargo/config.toml` CXXSTDLIB) so the shipped DLL is self-contained.
hudhook = { version = "0.9", default-features = false, features = ["dx12"] }
