[package]
name = "unseamless-core"
description = "Platform-independent core for unseamless-coop: config, scaling, sync model, protocol types. No game/OS deps — host-testable."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "unseamless_core"

[dependencies]
log = { workspace = true }
num_enum = "0.7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10" # pure-Rust SHA-256 for the rung-4 lobby-discovery token (links on windows-gnu)
toml = "0.8"
