[package]
name = "unseamless-core"
description = "Platform-independent core for unseamless-coop: config, scaling, sync model, protocol types. No game/OS deps — host-testable."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "unseamless_core"

# Host-only codegen for the bitmap_font tables. Behind a feature + required-features so the binary is
# NOT cross-compiled to a useless windows-gnu exe on every `cargo build` (it rasterises the bitmap_font
# tables on the host and must run there). Regenerate with:
#   cargo run -p unseamless-core --bin gen-bitmap-font --features gen-bitmap-font --target x86_64-unknown-linux-gnu
[[bin]]
name = "gen-bitmap-font"
required-features = ["gen-bitmap-font"]

[features]
gen-bitmap-font = []

[dependencies]
log = { workspace = true }
num_enum = "0.7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10" # pure-Rust SHA-256 for the rung-4 lobby-discovery token (links on windows-gnu)
toml = "0.8"
